--- a/songlist.html
+++ b/songlist.html
@@ -121,9 +121,9 @@ Hear some on my <a href="videos.html">videos</a> page, do go and have a listen.<
 <img class="w3-image w3-image-abg w3-round" src="photos/andybgoode0004-thumb.jpg" alt="Vintage Rock and Roll Singer">
     <h2>Rock and Roll / Jive / Rockabilly</h2>
     <p>
-Chuck Berry: <a href="videos.html#videoJohnnyBGoode">Johnny B. Goode</a>, Rock and Roll Music<br/>
+Chuck Berry: <a href="videos.html?videoRef=videoJohnnyBGoode">Johnny B. Goode</a>, Rock and Roll Music<br/>
 Bill Haley and His Comets: Rock Around the Clock, Shake, Rattle and Roll, See You Later Alligator<br/>
-Elvis: Blue Suede Shoes, Hound Dog, All Shook Up, Jailhouse Rock, Can't Help Falling in Love<br/>
+Elvis: Blue Suede Shoes, <a href="videos.html?videoRef=videoHoundDog">Hound Dog</a>, All Shook Up, Jailhouse Rock, Can't Help Falling in Love<br/>
 Eddie Cochran: C'mon Everybody<br/>
 Danny and The Juniors: Rock And Roll Is Here To Stay, At the Hop<br/>
 The Everly Brothers: Wake up Little Susie, Bye, Bye Love<br/>
@@ -133,7 +133,7 @@ Chubby Checker: Let's Twist Again<br/>
 Buddy Holly: That'll Be the Day<br/>
 Richie Valens: La Bamba<br/>
 Frankie Lymon: Why Do Fools Fall in Love<br/>
-Dion and The Belmonts: <a href="videos.html#videoTeenagerInLove">A Teenager in Love</a><br/>
+Dion and The Belmonts: <a href="videos.html?videoRef=videoTeenagerInLove">A Teenager in Love</a><br/>
 The Penguins: <a href="videos.html#videoEarthAngel">Earth Angel (Will You Be Mine)</a><br/>
 Little Anthony and The Imperials: Tears on my Pillow<br/>
 Johnny Tillotson: <a href="music.html#musicPoetry">Poetry in Motion</a><br/>
@@ -150,7 +150,7 @@ The Platters: Harbour Lights<br/>
 <img class="w3-image w3-image-abg w3-round" src="photos/andybgoode0037-thumb.jpg" alt="Christmas Singer">
     <h2>Xmas Classics</h2>
     <p>
-Michael Bublé: <a href="videos.html#videoChristmasPlaylist">Holly Jolly Christmas</a>, <a href="videos.html#videoChristmasPlaylist">Frosty The Snowman</a><br/>
+Michael Bublé: <a href="videos.html?videoRef=videoHollyJolly">Holly Jolly Christmas</a>, <a href="videos.html?videoRef=videoFrosty">Frosty The Snowman</a><br/>
 Michael Bublé and Puppini Sisters: <a href="videos.html#videoChristmasPlaylist">Jingle Bells</a><br/>
 Perry Como: It’s Beginning To Look A Lot Like Christmas<br/>
 Dean Martin: Let it Snow, Let it Snow, Let it Snow<br/>
@@ -193,7 +193,7 @@ Vera Lynn: The White Cliffs of Dover, We'll Meet Again<br/>
 <img class="w3-image w3-image-abg w3-round" src="photos/andybgoode0035-thumb.jpg" alt="Rat Pack / Swing Singer">
     <h2>Rat Pack / Crooner / Swing Hits</h2>
     <p>
-Frank Sinatra: New York, New York, <a href="videos.html#videoFlyMe">Fly Me To The Moon</a>, Cheek To Cheek, Come Fly With Me, <a href="videos.html#videoYouMakeMeYoung">You Make Me Feel So Young</a>, I've Got You Under My Skin, The Lady Is a Tramp, Love and Marriage<br/>
+Frank Sinatra: New York, New York, <a href="videos.html#videoFlyMe">Fly Me To The Moon</a>, Cheek To Cheek, Come Fly With Me, <a href="videos.html?videoRef=videoYouMakeMeYoung">You Make Me Feel So Young</a>, I've Got You Under My Skin, The Lady Is a Tramp, Love and Marriage<br/>
 Bing Crosby: Pennies from Heaven, All I Do Is Dream of You<br/>
 Bobby Darin: Mack the Knife, Beyond the Sea, Things<br/>
 Dean Martin: Sway, Memories Are Made Of This, <a href="videos.html#videoHowDoYouLike">How D'Ya Like Your Eggs in the Morning</a>, It Don't Mean A Thing<br/>
