--- a/videos.html
+++ b/videos.html
@@ -160,30 +160,9 @@ function menuFunction() {
 <script src="misc/andybgoode-video.js"></script>
 <script>
   //initialise video player
+  alert("A")
   displayVideoPlayer("videoPlayerVideo","videoPlayerList","No Autoplay");
-
-
-//TODO
-//1) video selection onto a single player (click video name/thumbnail navigates to player + loads selected video)
-//loadSelectedVideo(1)
-//video record: number,name,description,thumbnail,is a playlist,youTube ID
-//addVideo(videoRef,isPlaylist,name,thumbnail,caption,youTubeID)
-
-
-//single video
-//addVideo("FlyMoon",0,"Fly Me To The Moon","photo0010","The definitive Frank Sinatra song from the time when holidays on jets liners were new. This was recorded live at norton Juxta Twycross Fete.","01BAwrxATqc");
-
-//playlist
-//addVideo("RnRJukeBox",1,"1950s/60s Rock n Roll Jukebox","photo0011","Here's some of my Rock and Roll hits, including: Hound Dog, Johnny B. Goode, Teenager in Love, This Ole House, Great Balls of Fire and more. Feel free to sing along. 'Johnny B. Goode' originally by the fantastic Chuck Berry. 'Back to the Future' is one of my favourite movies, and that track really adds energy to the film.","PLTlGVrSbUuPhcs2zGuGratWyUqKBq169Z");
-
-
-
-//2) video loading when page opens (from link on another page)
-//on page load if video is specified the load youTube video (or playlist) in player
-//http://www.andybgoode.com/?videoID=1
-//var videoID = GetURLParameter('videoID');
-//alert("videoID=" + videoID);
-
+    alert("B")
 </script>
 
 </body>
