--- a/music.html
+++ b/music.html
@@ -69,7 +69,7 @@
 <div class="w3-bar w3-black">
   <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border w3-hide-large w3-hide-medium" onclick="menuFunction()">&#9776;</a>
   <a href="index.html" class="w3-bar-item w3-button w3-border">Home</a>
-  <a href="index.html#contact" class="w3-bar-item w3-button w3-border">Contact</a>
+  <a href="#contact" class="w3-bar-item w3-button w3-border">Contact</a>
   <a href="videos.html" class="w3-bar-item w3-button w3-border">Videos</a>
   <a href="photos.html" class="w3-bar-item w3-button w3-border w3-hide-small">Photos</a>
   <a href="songlist.html" class="w3-bar-item w3-button w3-border w3-hide-small">Songs</a>
@@ -243,7 +243,7 @@ Its top-tapping energy all the way with beautiful harmonies all the way.<br/>
 <li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
 <li id='liJays'>The Jays Vintage: <a href='http://www.TheJaysVintage.com'>The Jays Vintage</a></li>
-<li id="liWebsite">Version: v2.5.0</li>
+<li id="liWebsite">Version: v2.5.1</li>
 </ul>
   </div>
 </div>
