--- a/news.html
+++ b/news.html
@@ -69,7 +69,7 @@
 <div class="w3-bar w3-black">
   <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border w3-hide-large w3-hide-medium" onclick="menuFunction()">&#9776;</a>
   <a href="index.html" class="w3-bar-item w3-button w3-border">Home</a>
-  <a href="index.html#contact" class="w3-bar-item w3-button w3-border">Contact</a>
+  <a href="#contact" class="w3-bar-item w3-button w3-border">Contact</a>
   <a href="videos.html" class="w3-bar-item w3-button w3-border">Videos</a>
   <a href="photos.html" class="w3-bar-item w3-button w3-border w3-hide-small">Photos</a>
   <a href="music.html" class="w3-bar-item w3-button w3-border w3-hide-small">Music</a>
@@ -128,7 +128,7 @@ This year I am giving a few FREE gigs to local worthy causes (Hospices, Charitie
   <div class="w3-third w3-black">
 <img src="photos/andybgoode0035-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Rat Pack gigs">  
     <h3>Rat Pack Gigs</h3>
-    <p>Since I started, I have always sang a few Sinatra and Nat King Cole songs amongst the Rock and Roll hits. These were always very popular and folks often asked for more of the same. I oblidged. In 2018 I launched a specific Rat Pack set. So if you enjoy a little Frank Sinatra, Dean Martin, Tony Bennett and other Crooners, do talk to me about a Rat Pack gig.</p>
+    <p>Since I started, I have always sang a few Sinatra and Nat King Cole songs amongst the Rock and Roll hits. These were always very popular and folks often asked for more of the same. I oblidged. In 2018 I launched a specific Rat Pack set. So if you enjoy a little Frank Sinatra, Dean Martin, Tony Bennett and other Crooners, do talk to me about a Rat Pack gig ... <a href="songlist.html#songsRat">Songs</a></p>
   </div>
 
   <div class="w3-third w3-black">
@@ -152,7 +152,7 @@ Or click to download each mp3 for free.<br/>
   <div class="w3-third w3-black">
 <img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Andy B Goode Showreel">  
     <h3>Summer Showreel</h3>
-    <p>Snippets of many of my songs can be seen in my <a href="music.html#videos">'Summer Showreel 2016'</a>, which was recorded live at St Pauls Church Dosthill Summer Vintage Fete.</p>
+    <p>Snippets of many of my songs can be seen in my <a href="videos.html?videoRef=videoSummerShowReel2016">'Summer Showreel 2016'</a>, which was recorded live at St Pauls Church Dosthill Summer Vintage Fete.</p>
   </div>
 
   <div class="w3-third w3-black">
@@ -174,7 +174,7 @@ Or click to download each mp3 for free.<br/>
 <img src="images/redandginger-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Red and Ginger">  
     <h3>1950s Tea Dance</h3>
     <h4>April 2017, Coleorton</h4>
-    <p>The <a href="https://www.facebook.com/LoughboroughLovesVintage">LoughboroughLovesVintage</a> Good Friday Vintage 1950s Tea Dance was a big hit. 
+    <p>The <a href="https://www.facebook.com/LoughboroughLovesVintage">Loughborough Loves Vintage</a> Good Friday Vintage 1950s Tea Dance was a big hit. 
 I sang Rock n Roll while fabulous <a href="https://www.facebook.com/DanceWithRedAndGinger">Red and Ginger</a> lead the dancing. 
 They are a pair of top quality dance teachers who defy gravity with their fancy footwork. I can whole-heartedly recommend them. 
 Can't wait for them to arrange more events!</p>
@@ -193,7 +193,7 @@ Live entertainment also came from the lovely female vintage soloist <a href="htt
 <img src="photos/andybgoode0027-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="AndyBGoode">
     <h3>Loughborough Loves Vintage Fair</h3>
     <h4>Feb 2017, Rosebery St Peters Community Centre, Loughborough</h4>
-    <p><a href="https://www.facebook.com/LoughboroughLovesVintage">LoughboroughLovesVintage</a> Vintage Fayre.<br/>
+    <p><a href="https://www.facebook.com/LoughboroughLovesVintage">Loughborough Loves Vintage</a> Vintage Fayre.<br/>
 A lovely little vintage afternoon.<br/>
 As it was nearly Valentines day week, I sang Rock and Roll and Crooned some Love songs. 
 Also live entertainment came from the talented <a href="https://www.facebook.com/EleanorSings">'Eleanor Mattley'</a>. 
@@ -208,14 +208,13 @@ The 'Pop up tea room' served amazing cakes, milkshakes and afternoon Teas.</p>
 <img src="photos/andybgoode0024-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Andy B Goode at Swadlincote">  
     <h3>Swadlincote International Food And Drink Festival</h3>
     <h4>October 2016, Swadlincote</h4>
-    <p><a href="http://www.south-derbys.gov.uk/community_and_living/community_events/international_food/default.asp">Swadlincote International Food and Drink Festival</a>. Outside the lovely '<a href="http://www.curlymagpie.co.uk/">Curly Magpie</a>' vintage shop. I sung classic Rock and Crooner tunes while people danced in the street.<br/>
-It was energetic 1950s Rock n Roll and tasty food from all over the world...What more could you want?</p>
+    <p>Outside the lovely '<a href="http://www.curlymagpie.co.uk/">Curly Magpie</a>' vintage shop. I sung classic Rock and Crooner tunes while people danced in the street. It was energetic 1950s Rock n Roll and tasty food from all over the world...What more could you want? I've sung in the town centre many times this year and it has been fun meeting loads of vintage fans.</p>
   </div>
 
   <div class="w3-third w3-black">
 <img src="photos/andybgoode0030-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Andy B Goode at Care Homes">
     <h3>Care Homes</h3>
-    <p>It's great singing at care homes. See their faces light up as they recognise a favourite song from their youth. You just watch them sing along enjoying those classics and know all that practicing is worthwhile.<br/>
+    <p>It's great singing at care homes. See their faces light up as they recognise a favourite song from their youth. You just watch them sing along enjoying those classics and know all that practicing is worthwhile. At Christmas time, I do a special themed set that includes seasonal sing along tunes.<br/>
 </p>
   </div>
 
@@ -318,7 +317,7 @@ People joined in on some songs, which was lovely.</p>
 <li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
 <li id='liJays'>The Jays Vintage: <a href='http://www.TheJaysVintage.com'>The Jays Vintage</a></li>
-<li id="liWebsite">Version: v2.5.0</li>
+<li id="liWebsite">Version: v2.5.1</li>
 </ul>
   </div>
 </div>
