--- a/songlist.html
+++ b/songlist.html
@@ -69,7 +69,7 @@
 <div class="w3-bar w3-black">
   <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border w3-hide-large w3-hide-medium" onclick="menuFunction()">&#9776;</a>
   <a href="index.html" class="w3-bar-item w3-button w3-border">Home</a>
-  <a href="index.html#contact" class="w3-bar-item w3-button w3-border">Contact</a>
+  <a href="#contact" class="w3-bar-item w3-button w3-border">Contact</a>
   <a href="videos.html" class="w3-bar-item w3-button w3-border">Videos</a>
   <a href="photos.html" class="w3-bar-item w3-button w3-border w3-hide-small">Photos</a>
   <a href="music.html" class="w3-bar-item w3-button w3-border w3-hide-small">Music</a>
@@ -117,7 +117,7 @@ Hear some on my <a href="videos.html">videos</a> page, do go and have a listen.<
 </div>
 
 <div class="w3-row-padding">
-  <div class="w3-half w3-black">
+  <div id="songsRock" class="w3-half w3-black">
 <img class="w3-image w3-image-abg w3-round" src="photos/andybgoode0004-thumb.jpg" alt="Vintage Rock and Roll Singer">
     <h2>Rock and Roll / Jive / Rockabilly</h2>
     <p>
@@ -128,7 +128,7 @@ Eddie Cochran: C'mon Everybody<br/>
 Danny and The Juniors: Rock And Roll Is Here To Stay, At the Hop<br/>
 The Everly Brothers: Wake up Little Susie, Bye, Bye Love<br/>
 Thurston Harris: Little Bitty Pretty One<br/>
-Jerry Lee Lewis: Great Balls of Fire<br/>
+Jerry Lee Lewis: <a href="videos.html?videoRef=videoGreatBalls">Great Balls of Fire</a><br/>
 Chubby Checker: Let's Twist Again<br/>
 Buddy Holly: That'll Be the Day<br/>
 Richie Valens: La Bamba<br/>
@@ -141,28 +141,28 @@ Cliff Richard: Living Doll, Move It, Congratulations<br/>
 Chris Montez: Let's Dance<br/>
 Roy Orbison: Ooby Dooby, Oh, Pretty Woman<br/>
 Fats Domino: I'm Walking<br/>
-Shakin' Stevens: Green Door, This Ole House<br/>
+Shakin' Stevens: Green Door, <a href="videos.html?videoRef=videoThisOleHouse">This Ole House</a><br/>
 The Platters: Harbour Lights<br/>
 </p>
   </div>
 
-  <div class="w3-half w3-black">
+  <div id="songsXmas" class="w3-half w3-black">
 <img class="w3-image w3-image-abg w3-round" src="photos/andybgoode0037-thumb.jpg" alt="Christmas Singer">
     <h2>Xmas Classics</h2>
     <p>
 Michael Bublé: <a href="videos.html?videoRef=videoHollyJolly">Holly Jolly Christmas</a>, <a href="videos.html?videoRef=videoFrosty">Frosty The Snowman</a><br/>
-Michael Bublé and Puppini Sisters: <a href="videos.html#videoChristmasPlaylist">Jingle Bells</a><br/>
+Michael Bublé and Puppini Sisters: <a href="videos.html?videoRef=videoJingleBells">Jingle Bells</a><br/>
 Perry Como: It’s Beginning To Look A Lot Like Christmas<br/>
 Dean Martin: Let it Snow, Let it Snow, Let it Snow<br/>
-Bing Crosby: Santa Claus is Comin’ to Town, <a href="videos.html#videoChristmasPlaylist">White Christmas</a><br/>
-Frank Sinatra: I’ll Be Home for Christmas, <a href="videos.html#videoChristmasPlaylist">Rudolph the Red-Nosed Reindeer</a><br/>
+Bing Crosby: Santa Claus is Comin’ to Town, <a href="videos.html?videoRef=videoWhiteChristmas">White Christmas</a><br/>
+Frank Sinatra: I’ll Be Home for Christmas, <a href="videos.html?videoRef=videoRudolph">Rudolph the Red-Nosed Reindeer</a><br/>
 Dickie Valentine: Christmas Alphabet<br/>
-Nat King Cole: <a href="videos.html#videoChristmasPlaylist">The Christmas Song</a><br/>
+Nat King Cole: <a href="videos.html?videoRef=videoChristmas">The Christmas Song</a><br/>
 Tony Bennett: Sleigh Ride<br/>
-Elvis: Blue Christmas, <a href="videos.html#videoChristmasPlaylist">Winter Wonderland</a>, <a href="videos.html#videoChristmasPlaylist">Silent Night</a><br/>
-Chuck Berry: <a href="videos.html#videoChristmasPlaylist">Run, Run, Rudolph</a><br/>
+Elvis: Blue Christmas, <a href="videos.html?videoRef=videoWinter">Winter Wonderland</a>, <a href="videos.html?videoRef=videoSilent">Silent Night</a><br/>
+Chuck Berry: <a href="videos.html?videoRef=videoRun">Run, Rudolph, Run</a><br/>
 Bobby Helms: Jingle Bell Rock<br/>
-Bobby Day: <a href="videos.html#videoChristmasPlaylist">Rockin' Robin</a><br/>
+Bobby Day: <a href="videos.html?videoRef=videoRobin">Rockin' Robin</a><br/>
 Shakin' Stevens: Merry Xmas Everyone<br/>
 </p>
   </div>
@@ -170,13 +170,13 @@ Shakin' Stevens: Merry Xmas Everyone<br/>
 
 
 <div class="w3-row-padding">
-  <div class="w3-half w3-black">
+  <div id="songs1940s" class="w3-half w3-black">
 <img class="w3-image w3-image-abg w3-round" src="photos/andybgoode0036-thumb.jpg" alt="1940s Singer">
     <h2>1940's Classics</h2>
     <p>
 Al Bowlly: Goodnight Sweetheart<br/>
 Dooley Wilson: As Time Goes By<br/>
-Bing Crosby: Blue Skies, I'll Be Seeing You, Swinging on A Star, You Are My Sunshine<br/>
+Bing Crosby: Blue Skies, I'll Be Seeing You, <a href="videos.html?videoRef=videoSunshine">You Are My Sunshine</a>, Swinging on A Star<br/>
 Cliff Edwards : When You Wish Upon a Star<br/>
 James Baskett: Zip-a-Dee-Doo-Dah<br/>
 Frank Sinatra: When You're Smiling<br/>
@@ -189,14 +189,14 @@ Vera Lynn: The White Cliffs of Dover, We'll Meet Again<br/>
 </p>
   </div>
 
-  <div class="w3-half w3-black">
+  <div id="songsRat" class="w3-half w3-black">
 <img class="w3-image w3-image-abg w3-round" src="photos/andybgoode0035-thumb.jpg" alt="Rat Pack / Swing Singer">
     <h2>Rat Pack / Crooner / Swing Hits</h2>
     <p>
-Frank Sinatra: New York, New York, <a href="videos.html#videoFlyMe">Fly Me To The Moon</a>, Cheek To Cheek, Come Fly With Me, <a href="videos.html?videoRef=videoYouMakeMeYoung">You Make Me Feel So Young</a>, I've Got You Under My Skin, The Lady Is a Tramp, Love and Marriage<br/>
+Frank Sinatra: New York, New York, <a href="videos.html?videoRef=videoFlyMe">Fly Me To The Moon</a>, Cheek To Cheek, Come Fly With Me, <a href="videos.html?videoRef=videoYouMakeMeYoung">You Make Me Feel So Young</a>, I've Got You Under My Skin, The Lady Is a Tramp, Love and Marriage<br/>
 Bing Crosby: Pennies from Heaven, All I Do Is Dream of You<br/>
 Bobby Darin: Mack the Knife, Beyond the Sea, Things<br/>
-Dean Martin: Sway, Memories Are Made Of This, <a href="videos.html#videoHowDoYouLike">How D'Ya Like Your Eggs in the Morning</a>, It Don't Mean A Thing<br/>
+Dean Martin: Sway, Memories Are Made Of This, <a href="videos.html?videoRef=videoHowDoYouLike">How D'Ya Like Your Eggs in the Morning</a>, It Don't Mean A Thing<br/>
 Nat King Cole: <a href="music.html#musicLove">L-O-V-E</a>, <a href="music.html#musicLetThereBeLove">Let There Be Love</a>, When I Fall in Love<br/>
 Michael Bublé: All of Me, You've Got A Friend In Me<br/>
 </p>
@@ -205,7 +205,7 @@ Michael Bublé: All of Me, You've Got A Friend In Me<br/>
 
 
 <div class="w3-row-padding">
-  <div class="w3-half w3-black">
+  <div id="songs1970s" class="w3-half w3-black">
 <img class="w3-image w3-image-abg w3-round" src="photos/andybgoode0010-thumb.jpg" alt="1970s Singer">
     <h2>1970's Smashes</h2>
     <p>
@@ -248,7 +248,7 @@ Frank Sinatra: New York, New York<br/>
 <li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
 <li id='liJays'>The Jays Vintage: <a href='http://www.TheJaysVintage.com'>The Jays Vintage</a></li>
-<li id="liWebsite">Version: v2.5.0</li>
+<li id="liWebsite">Version: v2.5.1</li>
 </ul>
   </div>
 </div>
