--- a/videos.html
+++ b/videos.html
@@ -70,7 +70,7 @@
 <div class="w3-bar w3-black">
   <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border w3-hide-large w3-hide-medium" onclick="menuFunction()">&#9776;</a>
   <a href="index.html" class="w3-bar-item w3-button w3-border">Home</a>
-  <a href="index.html#contact" class="w3-bar-item w3-button w3-border">Contact</a>
+  <a href="#contact" class="w3-bar-item w3-button w3-border">Contact</a>
   <a href="photos.html" class="w3-bar-item w3-button w3-border">Photos</a>
   <a href="music.html" class="w3-bar-item w3-button w3-border w3-hide-small">Music</a>
   <a href="songlist.html" class="w3-bar-item w3-button w3-border w3-hide-small">Songs</a>
