--- a/index.html
+++ b/index.html
@@ -69,18 +69,7 @@
 <div class="w3-container w3-black">
 
 
-<!--
-<div class="w3-bar w3-black">
-  <a href="#" class="w3-bar-item w3-button w3-border w3-mobile w3-mobile">Home</a>
-  <a href="news.html" class="w3-bar-item w3-button w3-border w3-mobile">News</a>
-  <a href="photos.html" class="w3-bar-item w3-button w3-border w3-mobile">Photos</a>
-  <a href="music.html" class="w3-bar-item w3-button w3-border w3-mobile">Music</a>
-  <a href="videos.html" class="w3-bar-item w3-button w3-border w3-mobile">Videos</a>
-  <a href="songlist.html" class="w3-bar-item w3-button w3-border w3-mobile">Songs</a>
-  <a href="testimonials.html" class="w3-bar-item w3-button w3-border w3-mobile">Testimonials</a>
-  <a href="#contact" class="w3-bar-item w3-button w3-border w3-mobile">Contact</a>
-</div>
--->
+
 <div class="w3-bar w3-black">
   <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border w3-hide-large w3-hide-medium" onclick="menuFunction()">&#9776;</a>
 <!--  <a href="#" class="w3-bar-item w3-button w3-border">Home</a> -->
@@ -165,7 +154,7 @@ function screenResize() {
 <li>1950s/60s Dynamic Rock and Roll Sets</li>
 <li>Jive the night away to those energetic hits</li>
 <li>Outfit: 'Teddy Boy' Jacket, Blue Suede shoes</li>
-<li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everly Brothers, Buddy Holly, Johnny Tillotson, The Pengiuns, The Platters, etc ... <a href="songlist.html">Songs</a></li>
+<li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everly Brothers, Buddy Holly, Johnny Tillotson, The Pengiuns, The Platters, etc ... <a href="songlist.html#songsRock">Songs</a></li>
 </ul>
   </div>
 
@@ -176,7 +165,7 @@ function screenResize() {
 <li>Classy Rat Pack, Swing and Crooning hits</li>
 <li>Smooth love songs by a heartfelt Crooner</li>
 <li>Outfit: Dinner Jacket, Trilby and Brogues</li>
-<li>Epic hits by: Frank Sinatra, Dean Martin, Nat King Cole, Tony Bennett, Bobby Darin, Andy Williams, Michael Buble, Harry Connick Jr, etc ... <a href="songlist.html">Songs</a></li>
+<li>Epic hits by: Frank Sinatra, Dean Martin, Nat King Cole, Tony Bennett, Bobby Darin, Andy Williams, Michael Buble, Harry Connick Jr, etc ... <a href="songlist.html#songsRat">Songs</a></li>
 </ul>
   </div>
 
@@ -187,7 +176,7 @@ function screenResize() {
 <li>1940s and Wartime Sets</li>
 <li>Forties tunes and Sing alongs</li>
 <li>Outfit: 1940s style</li>
-<li>Epic hits by: Nat King Cole, Bing Crosby, Al Bowlly, Vera Lynn, Cliff Edwards, James Baskett, Flanagan and Allen, Vaughn Monroe, George Formby, Frank Sinatra, etc ... <a href="songlist.html">Songs</a></li>
+<li>Epic hits by: Nat King Cole, Bing Crosby, Al Bowlly, Vera Lynn, Cliff Edwards, James Baskett, Flanagan and Allen, Vaughn Monroe, George Formby, Frank Sinatra, etc ... <a href="songlist.html#songs1940s">Songs</a></li>
 </ul>
   </div>
 
@@ -227,13 +216,13 @@ function screenResize() {
 <ul>
 <li>Memorable uplifting Rock and Seasonal classics</li>
 <li>Outfit: Dinner Jacket, Bow Tie</li>
-<li>Epic hits by: Bing Crosby, Bobby Helms, Chuck Berry, Elvis, Dean Martin, Michael Buble, etc ... <a href="songlist.html">Songs</a></li>
+<li>Epic hits by: Bing Crosby, Bobby Helms, Chuck Berry, Elvis, Dean Martin, Michael Buble, etc ... <a href="songlist.html#songsXmas">Songs</a></li>
 </ul>
     <h2>1970s </h2>
 <p>"Up to the Spirit in the Sky"</p>
 <ul>
 <li>Those colourful seventies will come alive</li>
-<li>Epic hits by: Barry Manilow, Blue Swede, Queen, Norman Greenbaum, Elvis, etc ... <a href="songlist.html">Songs</a></li>
+<li>Epic hits by: Barry Manilow, Blue Swede, Queen, Norman Greenbaum, Elvis, etc ... <a href="songlist.html#songs1970s">Songs</a></li>
 </ul>
   </div>
 
@@ -242,7 +231,7 @@ function screenResize() {
 <p>I'm also part of a 1940s Vocal Harmony Group named <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a>. 
 We sing delightful vintage tunes in the style of Bing Crosby and The Andrew's Sisters while dressed in lovely vintage outfits. 
 We also offer gigs with Andy B Goode for that special event.<br/>
-Perfect for: 1940s Events, Vintage Fairs, Town Centre, Bandstands, Christmas Events, Food Festivals, Veterans Events, Garden Parties, Golden Wedding Anniversaries <a href="songlist.html">Songs</a></p>
+Perfect for: 1940s Events, Vintage Fairs, Town Centre, Bandstands, Christmas Events, Food Festivals, Veterans Events, Garden Parties, Golden Wedding Anniversaries ... <a href="videos.html?videoRef=videoBeerBarrel">videos</a></p>
   </div>
 
 </div>
@@ -330,7 +319,7 @@ Some are solo gigs ('ABG') and others with <a href="http://www.TheJaysVintage.co
 <li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
 <!--<li id='liJays'>The Jays Vintage: <a href='http://www.TheJaysVintage.com'>The Jays Vintage</a></li>-->
-<li id="liWebsite">Version: v2.5.0</li>
+<li id="liWebsite">Version: v2.5.1</li>
 </ul>
   </div>
 </div>
