--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ function screenResize() {
 
 <!--<div class="w3-container w3-black w3-border-bottom w3-border-black">-->
 <div class="w3-cell-row">
-<img src="photos/andybgoode0034.jpg" class="w3-image w3-image-abg-x w3-round" alt="1950s/60s Rock and Roll Entertainer"><img src="photos/andybgoode0035.jpg" class="w3-image w3-image-abg-x w3-round" alt="1960s Rat Pack, Swing Singer"><img src="photos/andybgoode0036.jpg" class="w3-image w3-image-abg-x w3-round" alt="1940s and Wartime Vocalist">
+<img src="photos/andybgoode0049.jpg" class="w3-image w3-image-abg-x w3-round" alt="1950s/60s Rock and Roll Entertainer"><img src="photos/andybgoode0050.jpg" class="w3-image w3-image-abg-x w3-round" alt="1960s Rat Pack, Swing Singer"><img src="photos/andybgoode0048.jpg" class="w3-image w3-image-abg-x w3-round" alt="1940s and Wartime Vocalist">
 </div>
 <!--</div>-->
 
@@ -165,7 +165,7 @@ function screenResize() {
 <li>Classy Rat Pack, Swing and Crooning hits</li>
 <li>Smooth love songs by a heartfelt Crooner</li>
 <li>Outfit: Dinner Jacket, Trilby and Brogues</li>
-<li>Epic hits by: Frank Sinatra, Dean Martin, Nat King Cole, Tony Bennett, Bobby Darin, Andy Williams, Michael Buble, Harry Connick Jr, etc ... <a href="songlist.html#songsRat">Songs</a></li>
+<li>Epic hits by: Frank Sinatra, Dean Martin, Nat King Cole, Tony Bennett, Bobby Darin, Andy Williams, Michael Bublé, Harry Connick Jr, etc ... <a href="songlist.html#songsRat">Songs</a></li>
 </ul>
   </div>
 
@@ -216,9 +216,9 @@ function screenResize() {
 <ul>
 <li>Memorable uplifting Rock and Seasonal classics</li>
 <li>Outfit: Dinner Jacket, Bow Tie</li>
-<li>Epic hits by: Bing Crosby, Bobby Helms, Chuck Berry, Elvis, Dean Martin, Michael Buble, etc ... <a href="songlist.html#songsXmas">Songs</a></li>
+<li>Epic hits by: Bing Crosby, Bobby Helms, Chuck Berry, Elvis, Dean Martin, Michael Bublé, etc ... <a href="songlist.html#songsXmas">Songs</a></li>
 </ul>
-    <h2>1970s </h2>
+    <h2>1970s </h2>s
 <p>"Up to the Spirit in the Sky"</p>
 <ul>
 <li>Those colourful seventies will come alive</li>
@@ -319,7 +319,7 @@ Some are solo gigs ('ABG') and others with <a href="http://www.TheJaysVintage.co
 <li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
 <!--<li id='liJays'>The Jays Vintage: <a href='http://www.TheJaysVintage.com'>The Jays Vintage</a></li>-->
-<li id="liWebsite">Version: v2.5.1</li>
+<li id="liWebsite">Version: v2.5.2</li>
 </ul>
   </div>
 </div>
