Added New Rat Songs v2.5.2

--- a/songlist.html
+++ b/songlist.html
@@ -182,7 +182,7 @@ James Baskett: Zip-a-Dee-Doo-Dah<br/>
 Frank Sinatra: When You're Smiling<br/>
 Harry Connick, Jr.: It Had To Be You<br/>
 Michael Bublé: You're Nobody Till Somebody Loves You<br/>
-Nat King Cole: Straighten Up And Fly Right, It's Only A Paper Moon, Route 66, Stardust, Smile<br/>
+Nat King Cole: Straighten Up And Fly Right, It's Only A Paper Moon, Route 66, Stardust, Smile, Embraceable You, Autumn Leaves<br/>
 Rudy Vallée: Harbour Lights<br/>
 Wartime Classics: Bless them All, Hang Out This Washing, Kiss Me Goodnight Sergeant Major, Pack Up Your Troubles, Wish Me Luck As You Wave Me Goodbye<br/>
 Vera Lynn: The White Cliffs of Dover, We'll Meet Again<br/>
@@ -193,12 +193,14 @@ Vera Lynn: The White Cliffs of Dover, We'll Meet Again<br/>
 <img class="w3-image w3-image-abg w3-round" src="photos/andybgoode0035-thumb.jpg" alt="Rat Pack / Swing Singer">
     <h2>Rat Pack / Crooner / Swing Hits</h2>
     <p>
-Frank Sinatra: New York, New York, <a href="videos.html?videoRef=videoFlyMe">Fly Me To The Moon</a>, Cheek To Cheek, Come Fly With Me, <a href="videos.html?videoRef=videoYouMakeMeYoung">You Make Me Feel So Young</a>, I've Got You Under My Skin, The Lady Is a Tramp, Love and Marriage<br/>
+Frank Sinatra: New York, New York, <a href="videos.html?videoRef=videoFlyMe">Fly Me To The Moon</a>, Cheek To Cheek, Come Fly With Me, <a href="videos.html?videoRef=videoYouMakeMeYoung">You Make Me Feel So Young</a>, I've Got You Under My Skin, The Lady Is a Tramp, Love and Marriage, I Get A Kick Out Of You, Nice n Easy, Witchcraft, Young At Heart, Chicago<br/>
 Bing Crosby: Pennies from Heaven, All I Do Is Dream of You<br/>
 Bobby Darin: Mack the Knife, Beyond the Sea, Things<br/>
+Sammy Davis Jr: That Old Black Magic<br/>
 Dean Martin: Sway, Memories Are Made Of This, <a href="videos.html?videoRef=videoHowDoYouLike">How D'Ya Like Your Eggs in the Morning</a>, It Don't Mean A Thing<br/>
 Nat King Cole: <a href="music.html#musicLove">L-O-V-E</a>, <a href="music.html#musicLetThereBeLove">Let There Be Love</a>, When I Fall in Love<br/>
-Michael Bublé: All of Me, You've Got A Friend In Me<br/>
+Andrew Williams: Can't Take My Eyes Off Of You<br/>
+Michael Bublé: All of Me, You've Got A Friend In Me, That Way You Look Tonight<br/>
 </p>
   </div>
 </div>
@@ -248,7 +250,7 @@ Frank Sinatra: New York, New York<br/>
 <li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
 <li id='liJays'>The Jays Vintage: <a href='http://www.TheJaysVintage.com'>The Jays Vintage</a></li>
-<li id="liWebsite">Version: v2.5.1</li>
+<li id="liWebsite">Version: v2.5.2</li>
 </ul>
   </div>
 </div>
