--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
  All rights reserved
  -->
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GE2CYX0GR3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GE2CYX0GR3');
+</script>
 <title>Andy B Goode - Vintage Singer (Rock and Roll, Rat Pack Singer, 1940s/1950s/1960s/1970s)</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="w3.css">
